aplicando ultimos detalles

--- a/pages/excursiones.html
+++ b/pages/excursiones.html
@@ -29,7 +29,7 @@
     <header id="navbar-example" class="navbar navbar-dark bg-dark border-bottom" >
 
         <article class="container-xl">
-            <h1 class="navbar-brand fs-1 " href="#"><img src="../img/patagonia2.jpg" alt="Logo"
+            <h1 class="navbar-brand fs-1 "><img src="../img/patagonia2.jpg" alt="Logo"
                     class="w-25 rounded-circle">
                 Hotel San Martin
             </h1>
@@ -58,7 +58,7 @@
     <main>
         <section>
 
-            <div id="carouselExampleControls d-flex flex-row mb-3" class="carousel slide container" data-bs-ride="carousel">
+            <article id="carouselExampleControls d-flex flex-row mb-3" class="carousel slide container" data-bs-ride="carousel">
                 <div class="carousel-inner p-2">
                     <div class="carousel-item active">
                         <img src="../img/large/chapelco-large.jpg" class="d-block w-70" alt=" cerro chapelco">
@@ -80,11 +80,11 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
-            </div>
+            </article>
         </section>
 
         <section>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
+            <article class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                     <h3 class="accordion-header" id="flush-headingOne">
                         <button class="accordion-button collapsed letraTitulos" type="button" data-bs-toggle="collapse"
@@ -129,7 +129,7 @@
                             encuentra incluido en el Cinturón de Fuego del Pacífico.</div>
                         </p>
                 </div>
-            </div>
+            </article>
         </section>
 
 
@@ -139,16 +139,9 @@
     <footer class="seccion-pie ">
         <h3 class="text-center letraTitulos"> Politicas </h3>
 
-        <div class="container-xl" data-aos="zoom-out-up">
+        <div class="container" data-aos="flip-up">
 
-            <p class=" fw-semibold lh-base letraDescripcion">El check-in es a partir de las 16:00hs y el check-out es
-                hasta las
-                10:00hs.
-
-                Aceptamos las principales tarjetas de crédito y débito. Ofrecemos hasta 18 cuotas sin interés
-                abonando con tarjetas de crédito emitidas por bancos en Argentina. Simplemente indique la cantidad
-                de cuotas que desea en la sección de comentarios al momento de hacer su reserva por nuestra web.
-            </p>
+            <p class=" fw-semibold lh-base letraDescripcion">El check-in es a partir de las 16:00hs y el check-out es hasta las 10:00hs. Aceptamos las principales tarjetas de crédito y débito. Ofrecemos hasta 18 cuotas sin interés abonando con tarjetas de crédito emitidas por bancos en Argentina. Simplemente indique la cantidad de cuotas que desea en la sección de comentarios al momento de hacer su reserva por nuestra web. Estamos adheridos al plan Previaje. Los menores de 2 años no abonan estadía. El uso de las cocheras cubiertas gratuitas sujeta sujeto a disponibilidad (1 cochera por apartamento). Todos los servicios del área de relax, las parillas y el SUM están incluidos en el precio. No servimos desayuno. Todos los apartamentos cuentan con cocinas completamente equipados (cocina, heladera, cafetera, tostadora, microondas, etc.) para que puedan armarlo a su gusto.
 
             <p class="fs-6"> Consulte por estadías con mascotas en nuestro WHATS APPS.</p>
 
