--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -31,7 +31,7 @@
   <header id="navbar-example" class="navbar navbar-dark bg-dark border-bottom" data-aos="flip-down">
 
     <article class="container-xl">
-      <h1 class="navbar-brand fs-1 " href="#"><img src="../img/patagonia2.jpg" alt="Logo" class="w-25 rounded-circle">
+      <h1 class="navbar-brand fs-1 "><img src="../img/patagonia2.jpg" alt="Logo" class="w-25 rounded-circle">
         Hotel San Martin
       </h1>
       <nav>
@@ -126,18 +126,11 @@
   <footer class="seccion-pie ">
     <h3 class="text-center letraTitulos"> Politicas </h3>
 
-    <div class="container-xl" data-aos="zoom-out-up">
+    <div class="container" data-aos="flip-up">
 
-      <p class=" fw-semibold lh-base letraDescripcion">El check-in es a partir de las 16:00hs y el check-out es
-        hasta las
-        10:00hs.
+        <p class=" fw-semibold lh-base letraDescripcion">El check-in es a partir de las 16:00hs y el check-out es hasta las 10:00hs. Aceptamos las principales tarjetas de crédito y débito. Ofrecemos hasta 18 cuotas sin interés abonando con tarjetas de crédito emitidas por bancos en Argentina. Simplemente indique la cantidad de cuotas que desea en la sección de comentarios al momento de hacer su reserva por nuestra web. Estamos adheridos al plan Previaje. Los menores de 2 años no abonan estadía. El uso de las cocheras cubiertas gratuitas sujeta sujeto a disponibilidad (1 cochera por apartamento). Todos los servicios del área de relax, las parillas y el SUM están incluidos en el precio. No servimos desayuno. Todos los apartamentos cuentan con cocinas completamente equipados (cocina, heladera, cafetera, tostadora, microondas, etc.) para que puedan armarlo a su gusto.
 
-        Aceptamos las principales tarjetas de crédito y débito. Ofrecemos hasta 18 cuotas sin interés
-        abonando con tarjetas de crédito emitidas por bancos en Argentina. Simplemente indique la cantidad
-        de cuotas que desea en la sección de comentarios al momento de hacer su reserva por nuestra web.
-      </p>
-
-      <p class="fs-6"> Consulte por estadías con mascotas en nuestro WHATS APPS.</p>
+        <p class="fs-6"> Consulte por estadías con mascotas en nuestro WHATS APPS.</p>
 
 
 
