--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <div class="col-12 col-sm-6 d-flex align-item-center" data-aos="flip-left">
 
                 <article>
-                    <h1 class="display-5 text-center text-sm-start letraTitulos">PRIMER HOTEL CON SPA DE
+                    <h2 class="display-5 text-center text-sm-start letraTitulos">PRIMER HOTEL CON SPA DE
                         <span>VINOTERAPIA</span>
-                    </h1>
+                    </h2>
 
                     <p class="text-center text-sm-start letraDescripcion">La <span>vinoterapia </span> es una técnica
                         que consiste
@@ -124,13 +124,13 @@
 
         <!--------------------------SECCION RESEÑAS DE HOTEL--------------------------------->
 
-        <section data-aos="zoom-in-down">
+        
 
 
 
 
-            <div class="accordion" id="accordionPanelsStayOpenExample">
-                <div class="accordion-item ">
+            <section class="accordion" id="accordionPanelsStayOpenExample" data-aos="zoom-in-down">
+                <article class="accordion-item ">
                     <h3 class="accordion-header letraTitulos" id="panelsStayOpen-headingOne">
                         <button class="accordion-button py-3 my-2 bg-secondary text-black" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
@@ -146,8 +146,8 @@
                             cinco estrellas y cada día se perfecciona un poco más
                         </p>
                     </div>
-                </div>
-                <div class="accordion-item">
+                </article>
+                <article class="accordion-item">
                     <h3 class="accordion-header letraTitulos" id="panelsStayOpen-headingTwo">
                         <button class="accordion-button collapsed py-3 my-2 bg-secondary text-black" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
@@ -162,8 +162,8 @@
                                 que incluye un tratamiento de "vinoterapia".</strong>
                         </p>
                     </div>
-                </div>
-                <div class="accordion-item ">
+                </article>
+                <article class="accordion-item ">
                     <h3 class="accordion-header letraTitulos" id="panelsStayOpen-headingThree">
                         <button class="accordion-button collapsed py-3 my-2 bg-secondary text-black" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
@@ -180,10 +180,10 @@
                                 convirtió en "el destino perfecto"</strong>
                         </p>
                     </div>
-                </div>
-            </div>
+                </article>
+            </section>
 
-        </section>
+        
 
 
 
@@ -193,26 +193,26 @@
         <section id="seccion-condecoraciones" class="my-4" data-aos="fade-down" data-aos-easing="linear"
             data-aos-duration="1500">
 
-            <h2 class="letraTitulos">CONDECORACIONES</h2>
+            <h2 class="letraTitulos container-fluid">CONDECORACIONES</h2>
 
             <div class="d-flex flex-colum justify-content-center align-item-center  ">
 
                 <article class="card m-2 shadow-lg border-end-0 tarjetaCondecoraciones" style="width: 30rem;">
-                    <img src="./img/2017-l.jpg" class="card-img-top rounded-4 tarjetaPremioImagen" alt="Premio 2017">
+                    <img src="./img/condecoracioens/dosmil17.jpg" class="card-img-top rounded-4 tarjetaPremioImagen" alt="Premio 2017">
                     <div class="card-body">
                         <p class="card-text text-dark ">Condecoracion 2017</p>
                     </div>
                 </article>
 
                 <article class="card m-2 shadow-lg border-end-0 tarjetaDos" style="width: 30rem;">
-                    <img src="./img/2018-l.jpg" class="card-img-top rounded-4 tarjetaPremioImagen" alt="Premio 2018">
+                    <img src="./img/condecoracioens/dosmil18.jpg" class="card-img-top rounded-4 tarjetaPremioImagen" alt="Premio 2018">
                     <div class="card-body">
                         <p class="card-text text-dark k ">Condecoracion 2018</p>
                     </div>
                 </article>
 
                 <article class="card m-2 shadow-lg border-end-0 tarjetaTres" style="width: 30rem;">
-                    <img src="./img/2019-l.jpg" class="card-img-top rounded-4 tarjetaPremioImagen" alt="Premio 2019">
+                    <img src="./img/condecoracioens/dosmil19.jpg" class="card-img-top rounded-4 tarjetaPremioImagen" alt="Premio 2019">
                     <div class="card-body">
                         <p class="card-text ">Condecoracion 2019</p>
                     </div>
@@ -236,16 +236,9 @@
     <footer class="seccion-pie ">
         <h3 class="text-center letraTitulos"> Politicas </h3>
 
-        <div class="container" data-aos="zoom-out-up">
+        <div class="container" data-aos="flip-up">
 
-            <p class=" fw-semibold lh-base letraDescripcion">El check-in es a partir de las 16:00hs y el check-out es
-                hasta las
-                10:00hs.
-
-                Aceptamos las principales tarjetas de crédito y débito. Ofrecemos hasta 18 cuotas sin interés
-                abonando con tarjetas de crédito emitidas por bancos en Argentina. Simplemente indique la cantidad
-                de cuotas que desea en la sección de comentarios al momento de hacer su reserva por nuestra web.
-            </p>
+            <p class=" fw-semibold lh-base letraDescripcion">El check-in es a partir de las 16:00hs y el check-out es hasta las 10:00hs. Aceptamos las principales tarjetas de crédito y débito. Ofrecemos hasta 18 cuotas sin interés abonando con tarjetas de crédito emitidas por bancos en Argentina. Simplemente indique la cantidad de cuotas que desea en la sección de comentarios al momento de hacer su reserva por nuestra web. Estamos adheridos al plan Previaje. Los menores de 2 años no abonan estadía. El uso de las cocheras cubiertas gratuitas sujeta sujeto a disponibilidad (1 cochera por apartamento). Todos los servicios del área de relax, las parillas y el SUM están incluidos en el precio. No servimos desayuno. Todos los apartamentos cuentan con cocinas completamente equipados (cocina, heladera, cafetera, tostadora, microondas, etc.) para que puedan armarlo a su gusto.
 
             <p class="fs-6"> Consulte por estadías con mascotas en nuestro WHATS APPS.</p>
 
