--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,7 @@
     <header id="navbar-example" class="navbar navbar-dark bg-dark border-bottom " data-aos="flip-down">
 
         <article class="container-xl">
-            <h1 class="navbar-brand fs-1 " href="#"><img src="../img/patagonia2.jpg" alt="Logo"
+            <h1 class="navbar-brand fs-1 "><img src="../img/patagonia2.jpg" alt="Logo"
                     class="w-25 rounded-circle">
                 Hotel San
                 Martin</h1>
@@ -61,7 +61,7 @@
     <main class="fondoContacto">
 
         <div class="text-start">
-            <h3 class="text-uppercase letraSubtitulo">Contacto</h3>
+            <h2 class="text-uppercase letraSubtitulo">Contacto</h2>
         </div>
 
         <div class="row">
@@ -70,28 +70,28 @@
 
 
                 <form class="row g-3 container-xl">
-                    <div class="col-md-6">
+                    <article class="col-md-6">
                         <label for="inputEmail4" class="form-label">Email</label>
                         <input type="email" class="form-control" id="inputEmail4" placeholder="xxxxxxxx@email.com">
-                    </div>
-                    <div class="col-md-6">
+                    </article>
+                    <article class="col-md-6">
                         <label for="inputName" class="form-label">Nombre y apellido</label>
                         <input type="text" class="form-control" id="inputPassword4" placeholder="Nombre completo">
-                    </div>
-                    <div class="col-12">
+                    </article>
+                    <article class="col-12">
                         <label for="inputDireccion" class="form-label">Direccion</label>
                         <input type="text" class="form-control" id="inputDireccion" placeholder="Calle 1234">
-                    </div>
-                    <div class="col-8">
+                    </article>
+                    <article class="col-8">
                         <label for="inputDireccionDos" class="form-label">Tipo de vivienda</label>
                         <input type="text" class="form-control" id="inputDireccionDos"
                             placeholder="Casa, departamento, Hotel, etc">
-                    </div>
-                    <div class="col-md-6">
+                    </article>
+                    <article class="col-md-6">
                         <label for="inputCiudad" class="form-label">Ciudad</label>
                         <input type="text" class="form-control" id="inputCiudad" placeholder="Ciudad que reside">
-                    </div>
-                    <div class="col-md-4">
+                    </article>
+                    <article class="col-md-4">
                         <label for="inputProvincia" class="form-label">Provincia</label>
                         <select id="inputProvincia" class="form-select">
                             <option selected>Seleccione una opcion</option>
@@ -104,24 +104,24 @@
                             <option>Corrientes</option>
                             <option>Tucuman</option>
                         </select>
-                    </div>
-                    <div class="col-md-2">
+                    </article>
+                    <article class="col-md-2">
                         <label for="inputPostal" class="form-label">Codigo postal</label>
                         <input type="text" class="form-control" id="inputPostal">
-                    </div>
-                    <div class="col-12">
+                    </article>
+                    <article class="col-12">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="gridCheck">
                             <label class="form-check-label" for="gridCheck">
                                 ¿ Desea recibir novedades?
                             </label>
                         </div>
-                    </div>
-                    <div class="col-12">
+                    </article>
+                    <article class="col-12">
                         <button type="submit" class="btn botonEnviar"
                             style="--bs-btn-padding-y: .10rem; --bs-btn-padding-x: .10rem; --bs-btn-font-size: 1.2rem;">Enviar</button>
 
-                    </div>
+                    </article>
 
                 </form>
 
@@ -134,16 +134,9 @@
     <footer class="seccion-pie ">
         <h3 class="text-center letraTitulos"> Politicas </h3>
 
-        <div class="container-xl" data-aos="zoom-out-up">
+        <div class="container" data-aos="flip-up">
 
-            <p class=" fw-semibold lh-base letraDescripcion">El check-in es a partir de las 16:00hs y el check-out es
-                hasta las
-                10:00hs.
-
-                Aceptamos las principales tarjetas de crédito y débito. Ofrecemos hasta 18 cuotas sin interés
-                abonando con tarjetas de crédito emitidas por bancos en Argentina. Simplemente indique la cantidad
-                de cuotas que desea en la sección de comentarios al momento de hacer su reserva por nuestra web.
-            </p>
+            <p class=" fw-semibold lh-base letraDescripcion">El check-in es a partir de las 16:00hs y el check-out es hasta las 10:00hs. Aceptamos las principales tarjetas de crédito y débito. Ofrecemos hasta 18 cuotas sin interés abonando con tarjetas de crédito emitidas por bancos en Argentina. Simplemente indique la cantidad de cuotas que desea en la sección de comentarios al momento de hacer su reserva por nuestra web. Estamos adheridos al plan Previaje. Los menores de 2 años no abonan estadía. El uso de las cocheras cubiertas gratuitas sujeta sujeto a disponibilidad (1 cochera por apartamento). Todos los servicios del área de relax, las parillas y el SUM están incluidos en el precio. No servimos desayuno. Todos los apartamentos cuentan con cocinas completamente equipados (cocina, heladera, cafetera, tostadora, microondas, etc.) para que puedan armarlo a su gusto.
 
             <p class="fs-6"> Consulte por estadías con mascotas en nuestro WHATS APPS.</p>
 
