--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -29,7 +29,7 @@
 
         <div id="navbar-example" class="navbar navbar-dark bg-dark border-bottom" data-aos="flip-down">
             <div class="container-xl">
-                <a class="navbar-brand fs-1 " href="#"><img src="../img/patagonia2.jpg" alt=""
+                <a class="navbar-brand fs-1 "><img src="../img/patagonia2.jpg" alt=""
                         class="w-25 rounded-circle"> Hotel San
                     Martin</a>
                 <nav>
